# premura

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.kittify/: config.yaml
.kittify/charter/: charter.md
docs/: ARCHITECTURE_HISTORY.md  FEATURE_BLOOD.md  OPERATIONS.md  PARSER_CONTRIBUTING.md  PLAN.md  PRIOR_ART.md  PRIOR_ART_BRIEF.md  PRIOR_ART_RESULTS.md  PROPOSAL_LABS.md  README.md  RISK_OPPORTUNITY.md  ROADMAP.md  SPEC.md  STAGES.md  STATUS.md  UPDATE_STRATEGY.md  USERJOURNEY.md  VISION.md
docs/adr/: 0002-mcp-local-warehouse-boundary.md  0003-auto-safe-is-metadata-only.md  0004-stage3-operator-entrypoint.md  0005-profile-and-intake-contract.md  0006-profile-intake-storage-and-capture.md  0007-evidence-admissibility-as-a-declared-contract.md  0008-correlate-pre-registered-lagged-association.md  0009-session-research-trace-and-multiplicity-disclosure.md  0010-runtime-orchestrator-and-operating-roles.md  README.md
docs/agents/: domain.md  implement-review-drift-audit.md  issue-tracker.md
docs/architecture/: ARCHITECTURE_HISTORY.md  PARSER_CONTRIBUTING.md  PROFILE_AND_INTAKE_CONTRACT.md  STAGES.md  UPDATE_STRATEGY.md
docs/building/: README.md
docs/history/: README.md
docs/operating/: RUNTIME_AGENT.md
docs/operations/: OPERATIONS.md  RUNTIME_AGENT.md  STATUS.md
docs/planning/: operating-agent-roles.md
docs/product/: DOCTRINE.md  FULL_APP_DEVELOPMENT_PLAN.md  RISK_OPPORTUNITY.md  ROADMAP.md  ROADMAP_BOOTSTRAP_PLAN.md  SPEC.md  USERJOURNEY.md  VISION.md
docs/research/: PROPOSAL_LABS.md  UI_research.md
docs/shared/: CHANGELOG.md  DOCTRINE.md  ROADMAP.md  SPEC.md  STATUS.md
docs/using/: AGENT_CLIENTS.md  OPERATIONS.md  USERJOURNEY.md
kitty-specs/pubmed-grounding-tools-01KT1BPM/: meta.json  (+9 more)
ops/: bootstrap.sh  check_no_tracked_data.sh
tests/: README.md  __init__.py  conftest.py  test_acceptance.py  test_adversarial_eval.py  test_answer_ollama.py  test_answer_task.py  test_answer_task_rubric_playbook.py  test_answer_trial_seam.py  test_bmi_signal.py  test_bootstrap_cli.py  test_bootstrap_core.py  test_bootstrap_docs.py  test_condition_episode_store.py  test_dedupe.py  test_disclosure_rubric_fixtures.py  test_doc_references.py  test_docs_structure.py  test_doctrine_build_and_use.py  test_driver_persona.py  test_encrypt_roundtrip.py  test_engine.py  test_engine_analytical_contract.py  test_engine_analytical_inputs.py  test_engine_analytical_public_surface.py  test_engine_analytical_tools.py  test_engine_before_after_pairs.py  test_engine_comparative_signals.py  test_engine_condition_paired_t_test.py  test_engine_condition_pairs.py  test_engine_contract.py  test_engine_correlate_contract.py  test_engine_correlate_inputs.py  test_engine_correlate_tool.py  test_engine_descriptive_policy_integration.py  test_engine_descriptive_signals.py  test_engine_finished_tool_set_public_surface.py  test_engine_input_resolution_surface.py  test_engine_localtime.py  test_engine_paired_t_test.py  (+81 more)
(+739 files in other folders)
