[project]
name = "premura"
version = "0.4.0"
description = "Personal health data warehouse: monthly GDPR-dump ingestion from Garmin/HC/SAA/BMT into a local DuckDB with encrypted export artifacts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1,<2",
    "mcp>=1.27,<2",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "typer>=0.12,<1",
    "rich>=13.9,<14",
    "polars>=1.12,<2",
    "python-dateutil>=2.9,<3",
    "tzlocal>=5.2,<6",
    "structlog>=24.4,<25",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "python-ulid>=3.0,<4",
    "pyarrow>=24.0.0",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
lab = [
    "docling>=2,<3",
    "onnxruntime>=1.26.0",
]
lab-vlm = [
    "mlx-vlm>=0.5.0",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5",
    "pytest-xdist>=3.8,<4",
    "pre-commit>=4,<5",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-dateutil>=2.9",
]

[project.scripts]
premura = "premura.cli:app"
premura-mcp = "premura.mcp.entrypoint:main"
premura-mcp-operator = "premura.mcp.entrypoint:main_operator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/premura"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not regression and not live_trial", "-n", "auto"]
markers = [
    "regression: tests that run against real on-disk exports (skipped when files absent)",
    "live_trial: local model-driven live trials (needs a running Ollama); never in CI (NFR-005)",
]
